--- a/index.html
+++ b/index.html
@@ -3,19 +3,75 @@
 <head>
   <meta charset="UTF-8">
   <title>Ropa Usada Maitencillo</title>
-  <meta name="description" content="Tienda online de ropa usada en Maitencillo">
+  <meta name="description" content="Tienda de ropa usada en Maitencillo">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background: #f5f5f5;
+    }
+    header {
+      background: #111;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 20px;
+    }
+    .producto {
+      background: white;
+      padding: 15px;
+      margin-bottom: 15px;
+      border-radius: 8px;
+    }
+    .precio {
+      color: green;
+      font-weight: bold;
+    }
+    .whatsapp {
+      display: block;
+      margin-top: 20px;
+      background: #25D366;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      text-decoration: none;
+      border-radius: 8px;
+    }
+  </style>
 </head>
 <body>
+
+<header>
   <h1>Ropa Usada Maitencillo</h1>
-  <p>Venta de ropa usada, moda sustentable.</p>
+  <p>Moda sustentable ♻️</p>
+</header>
 
+<div class="container">
   <h2>Productos</h2>
-  <ul>
-    <li>Chaqueta vintage - $15.000</li>
-    <li>Jeans Levi's - $18.000</li>
-    <li>Polera algodón - $8.000</li>
-  </ul>
 
-  <p>Contacto por WhatsApp</p>
+  <div class="producto">
+    <h3>Chaqueta vintage</h3>
+    <p class="precio">$15.000</p>
+  </div>
+
+  <div class="producto">
+    <h3>Jeans Levi's</h3>
+    <p class="precio">$18.000</p>
+  </div>
+
+  <div class="producto">
+    <h3>Polera algodón</h3>
+    <p class="precio">$8.000</p>
+  </div>
+
+  <a class="whatsapp" href="https://wa.me/569XXXXXXXX">
+    Comprar por WhatsApp
+  </a>
+</div>
+
 </body>
 </html>
