Enhance purchasing options in index.html
Added sections for in-person and WhatsApp purchasing options.

--- a/index.html
+++ b/index.html
@@ -68,8 +68,31 @@
     <p class="precio">$8.000</p>
   </div>
 
-  <a class="whatsapp" href="https://wa.me/569XXXXXXXX">
-    Comprar por WhatsApp
+  <h2>¿Cómo comprar?</h2>
+
+<div class="producto">
+  <h3>🛍️ Compra presencial</h3>
+  <p>
+    Visítanos en nuestra tienda física en Maitencillo.
+  </p>
+  <p>
+    📍 Dirección: <strong>AQUÍ VA TU DIRECCIÓN</strong>
+  </p>
+  <p>
+    🕒 Horario: <strong>Lunes a Sábado 10:00 a 19:00</strong>
+  </p>
+</div>
+
+<div class="producto">
+  <h3>📱 Compra por WhatsApp</h3>
+  <p>
+    Escríbenos y reserva tu prenda.
+  </p>
+  <a class="whatsapp" href="https://wa.me/E-30-F, Zapallar, Puchuncaví, Valparaíso" target="_blank">
+    Pedir por WhatsApp
+  </a>
+</div>
+
   </a>
 </div>
 
