--- a/index.html
+++ b/index.html
@@ -79,7 +79,26 @@
     📍 Dirección: <strong>AQUÍ VA TU DIRECCIÓN</strong>
   </p>
   <p>
-    🕒 Horario: <strong>Lunes a Sábado 10:00 a 19:00</strong>
+    🕒 Horario: <strong>martes
+12–8:15 p. m.
+
+miércoles
+12–8:15 p. m.
+
+jueves
+12–8:15 p. m.
+
+viernes
+12–8:15 p. m.
+
+sábado
+12–8:15 p. m.
+
+domingo
+12–8:15 p. m.
+
+lunes
+12–8:15 p. m.</strong>
   </p>
 </div>
 
@@ -88,7 +107,7 @@
   <p>
     Escríbenos y reserva tu prenda.
   </p>
-  <a class="whatsapp" href="https://wa.me/E-30-F, Zapallar, Puchuncaví, Valparaíso" target="_blank">
+  <a class="whatsapp" href="https://wa.me/E-30-F,Zapallar, Puchuncaví, Valparaíso" target="_blank">
     Pedir por WhatsApp
   </a>
 </div>
