--- a/index.html
+++ b/index.html
@@ -80,34 +80,35 @@
   </p>
   <p>
     🕒 Horario: <strong>martes
-12–8:15 p. m.
-
+12 – 8:15 p. m.
+
 miércoles
-12–8:15 p. m.
-
+12 – 8:15 p. m.
+
 jueves
-12–8:15 p. m.
-
+12 – 8:15 p. m.
+
 viernes
-12–8:15 p. m.
-
+12 – 8:15 p. m.
+
 sábado
-12–8:15 p. m.
-
+12 – 8:15 p. m.
+
 domingo
-12–8:15 p. m.
-
+12 – 8:15 p. m.
+
 lunes
-12–8:15 p. m.</strong>
+12 – 8:15 p. m.</strong>
   </p>
 </div>
 
 <div class="producto">
   <h3>📱 Compra por WhatsApp</h3>
   <p>
-    Escríbenos y reserva tu prenda.
+    Escríbenos y reserva tu prenda. 
   </p>
-  <a class="whatsapp" href="https://wa.me/E-30-F,Zapallar, Puchuncaví, Valparaíso" target="_blank">
+  <a class="whatsapp" href="https://wa.me/href="https://wa.me/56912345678?text=Hola%20quiero%20hacer%20un%20pedido%20en%20Ropa%20Usada%20Maitencillo"
+" target="_blank">
     Pedir por WhatsApp
   </a>
 </div>
