--- a/index.html
+++ b/index.html
@@ -104,11 +104,22 @@ lunes
 
 <div class="producto">
   <h3>📱 Compra por WhatsApp</h3>
+  <p> <div class="producto">
+  <h3>💳 Pago por transferencia</h3>
   <p>
+    Aceptamos pagos por transferencia bancaria.
+  </p>
+  <ol>
+    <li>Escríbenos por WhatsApp para confirmar disponibilidad.</li>
+    <li>Te enviaremos los datos para la transferencia.</li>
+    <li>Envía el comprobante por WhatsApp.</li>
+    <li>Retira en tienda o coordinamos entrega.</li>
+  </ol>
+</div>
+
     Escríbenos y reserva tu prenda. 
   </p>
-  <a class="whatsapp" href="https://wa.me/href="https://wa.me/56987679070?text=Hola%20quiero%20hacer%20un%20pedido%20en%20Ropa%20Usada%20Maitencillo"
-" target="_blank">
+  <a <a class="whatsapp"  href="https://wa.me/56987679070?text=Hola%20quiero%20comprar%20por%20transferencia%20en%20Ropa%20Usada%20Maitencillo"  target="_blank">   Comprar por WhatsApp </a>
     Pedir por WhatsApp
   </a>
 </div>
