--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Ropa Usada Maitencillo</title>
-  <meta name="description" content="Tienda de ropa usada en Maitencillo">
+  <meta name="description" content="Ropa usada en Maitencillo. Compra presencial o pedidos por WhatsApp.">
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background: #f5f5f5;
+      background: linear-gradient(135deg, #fdfcfb, #e2d1c3);
     }
     header {
-      background: #111;
+      background: #ff6f61;
       color: white;
-      padding: 20px;
+      padding: 30px 20px;
       text-align: center;
     }
     .container {
@@ -21,111 +21,34 @@
       margin: auto;
       padding: 20px;
     }
-    .producto {
+    .box {
       background: white;
-      padding: 15px;
-      margin-bottom: 15px;
-      border-radius: 8px;
+      padding: 20px;
+      margin-bottom: 20px;
+      border-radius: 12px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
     }
-    .precio {
-      color: green;
-      font-weight: bold;
+    h2 {
+      color: #ff6f61;
     }
     .whatsapp {
       display: block;
-      margin-top: 20px;
+      margin-top: 15px;
       background: #25D366;
       color: white;
       text-align: center;
       padding: 15px;
       text-decoration: none;
-      border-radius: 8px;
+      border-radius: 10px;
+      font-size: 18px;
+      font-weight: bold;
+    }
+    footer {
+      background: #333;
+      color: white;
+      text-align: center;
+      padding: 20px;
     }
   </style>
 </head>
-<body>
 
-<header>
-  <h1>Ropa Usada Maitencillo</h1>
-  <p>Moda sustentable ♻️</p>
-</header>
-
-<div class="container">
-  <h2>Productos</h2>
-
-  <div class="producto">
-    <h3>Chaqueta vintage</h3>
-    <p class="precio">$15.000</p>
-  </div>
-
-  <div class="producto">
-    <h3>Jeans Levi's</h3>
-    <p class="precio">$18.000</p>
-  </div>
-
-  <div class="producto">
-    <h3>Polera algodón</h3>
-    <p class="precio">$8.000</p>
-  </div>
-
-  <h2>¿Cómo comprar?</h2>
-
-<div class="producto">
-  <h3>🛍️ Compra presencial</h3>
-  <p>
-    Visítanos en nuestra tienda física en Maitencillo.
-  </p>
-  <p>
-    📍 Dirección: <strong>AQUÍ VA TU DIRECCIÓN</strong>
-  </p>
-  <p>
-    🕒 Horario: <strong>martes
-12 – 8:15 p. m.
-
-miércoles
-12 – 8:15 p. m.
-
-jueves
-12 – 8:15 p. m.
-
-viernes
-12 – 8:15 p. m.
-
-sábado
-12 – 8:15 p. m.
-
-domingo
-12 – 8:15 p. m.
-
-lunes
-12 – 8:15 p. m.</strong>
-  </p>
-</div>
-
-<div class="producto">
-  <h3>📱 Compra por WhatsApp</h3>
-  <p> <div class="producto">
-  <h3>💳 Pago por transferencia</h3>
-  <p>
-    Aceptamos pagos por transferencia bancaria.
-  </p>
-  <ol>
-    <li>Escríbenos por WhatsApp para confirmar disponibilidad.</li>
-    <li>Te enviaremos los datos para la transferencia.</li>
-    <li>Envía el comprobante por WhatsApp.</li>
-    <li>Retira en tienda o coordinamos entrega.</li>
-  </ol>
-</div>
-
-    Escríbenos y reserva tu prenda. 
-  </p>
-  <a <a class="whatsapp"  href="https://wa.me/56987679070?text=Hola%20quiero%20comprar%20por%20transferencia%20en%20Ropa%20Usada%20Maitencillo"  target="_blank">   Comprar por WhatsApp </a>
-    Pedir por WhatsApp
-  </a>
-</div>
-
-  </a>
-</div>
-
-</body>
-</html>
