--- a/index.html
+++ b/index.html
@@ -1,54 +1,95 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Ropa Usada Maitencillo</title>
-  <meta name="description" content="Ropa usada en Maitencillo. Compra presencial o pedidos por WhatsApp.">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: linear-gradient(135deg, #fdfcfb, #e2d1c3);
-    }
-    header {
-      background: #ff6f61;
-      color: white;
-      padding: 30px 20px;
-      text-align: center;
-    }
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 20px;
-    }
-    .box {
-      background: white;
-      padding: 20px;
-      margin-bottom: 20px;
-      border-radius: 12px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-    }
-    h2 {
-      color: #ff6f61;
-    }
-    .whatsapp {
-      display: block;
-      margin-top: 15px;
-      background: #25D366;
-      color: white;
-      text-align: center;
-      padding: 15px;
-      text-decoration: none;
-      border-radius: 10px;
-      font-size: 18px;
-      font-weight: bold;
-    }
-    footer {
-      background: #333;
-      color: white;
-      text-align: center;
-      padding: 20px;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Ropa Usada Maitencillo</title>
+<meta name="description" content="Ropa usada en Maitencillo. Pedidos por WhatsApp.">
+<style>
+body{
+  margin:0;
+  font-family:Arial, sans-serif;
+  background:#f0f7ff;
+}
+header{
+  background:#ff6f61;
+  color:white;
+  padding:25px;
+  text-align:center;
+}
+section{
+  max-width:900px;
+  margin:auto;
+  padding:20px;
+}
+.box{
+  background:white;
+  padding:20px;
+  margin-bottom:20px;
+  border-radius:12px;
+}
+.whatsapp{
+  display:block;
+  background:#25D366;
+  color:white;
+  text-align:center;
+  padding:15px;
+  text-decoration:none;
+  border-radius:10px;
+  font-weight:bold;
+}
+footer{
+  background:#333;
+  color:white;
+  text-align:center;
+  padding:15px;
+}
+</style>
 </head>
 
+<body>
+
+<header>
+<h1>Ropa Usada Maitencillo</h1>
+<p>Moda sustentable ♻️</p>
+</header>
+
+<section>
+
+<div class="box">
+<h2>🛍️ ¿Cómo comprar?</h2>
+<p>
+No mostramos productos fijos porque el stock cambia constantemente.
+</p>
+<p>
+Escríbenos por WhatsApp y dinos qué prenda estás buscando.
+</p>
+
+<a class="whatsapp"
+href="https://wa.me/56987679070?text=Hola%20quiero%20ver%20la%20ropa%20disponible%20en%20Ropa%20Usada%20Maitencillo"
+target="_blank">
+Ver ropa por WhatsApp
+</a>
+</div>
+
+<div class="box">
+<h2>💳 Formas de pago</h2>
+<ul>
+<li>Transferencia bancaria</li>
+<li>Pago presencial</li>
+</ul>
+</div>
+
+<div class="box">
+<h2>📍 Tienda física</h2>
+<p><strong>Dirección:</strong> AQUÍ VA TU DIRECCIÓN</p>
+<p><strong>Horario:</strong> Lunes a Domingo 12:00 – 20:15</p>
+</div>
+
+</section>
+
+<footer>
+© 2026 Ropa Usada Maitencillo
+</footer>
+
+</body>
+</html>
