Revise store hours for each day of the week
Updated store hours to include specific times for each day.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,26 @@ Ver ropa por WhatsApp
 <div class="box">
 <h2>📍 Tienda física</h2>
 <p><strong>Dirección:</strong> AQUÍ VA TU DIRECCIÓN</p>
-<p><strong>Horario:</strong> Lunes a Domingo 12:00 – 20:15</p>
+<p><strong>Horario:</strong> martes
+12 – 8:15 p. m.
+
+miércoles
+12 – 8:15 p. m.
+
+jueves
+12 – 8:15 p. m.
+
+viernes
+12 – 8:15 p. m.
+
+sábado
+12 – 8:15 p. m.
+
+domingo
+12 – 8:15 p. m.
+
+lunes
+12 – 8:15 p. m.</p>
 </div>
 
 </section>
