--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Ver ropa por WhatsApp
 
 <div class="box">
 <h2>📍 Tienda física</h2>
-<p><strong>Dirección:</strong> AQUÍ VA TU DIRECCIÓN</p>
+<p><strong>Dirección:</strong> E-30-F, Zapallar, Puchuncaví, Valparaíso</p>
 <p><strong>Horario:</strong> martes
 12 – 8:15 p. m.
 
