--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ Ver ropa por WhatsApp
 </ul>
 </div>
 
+</div>
 <div class="box">
 <h2>📍 Tienda física</h2>
 <p><strong>Dirección:</strong> E-30-F, Zapallar, Puchuncaví, Valparaíso</p>
@@ -102,6 +103,14 @@ domingo
 
 lunes
 12 – 8:15 p. m.</p>
+
+<div style="margin-top:15px;">
+<!-- https://maps.app.goo.gl/oGraPiv7d8U2Nt628 -->
+  
+</div>
+  
+</div>
+
 </div>
 
 </section>
