--- a/index.html
+++ b/index.html
@@ -119,5 +119,27 @@ lunes
 © 2026 Ropa Usada Maitencillo
 </footer>
 
+<style>
+  .whatsapp-float {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: #25D366;
+    color: white;
+    border-radius: 50px;
+    padding: 15px 18px;
+    font-size: 22px;
+    text-decoration: none;
+    box-shadow: 0px 2px 10px rgba(0,0,0,0.3);
+    z-index: 999;
+  }
+</style>
+
+<a class="whatsapp-float"
+   href="https://wa.me/56987679070?text=Hola%20quiero%20ver%20la%20ropa%20disponible%20en%20tu%20tienda"
+   target="_blank">
+  📱 WhatsApp
+</a>
+
 </body>
 </html>
